tests/dataset/tpc-ds/compiler/c/q48.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int _sum_int(list_int v) {
  int sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static int contains_list_string(list_string v, char *item) {
  for (int i = 0; i < v.len; i++)
    if (strcmp(v.data[i], item) == 0)
      return 1;
  return 0;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int year = 2000;

typedef struct {
  int cdemo_sk;
  int addr_sk;
  int sold_date_sk;
  double sales_price;
  double net_profit;
  int quantity;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_sk;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cd_demo_sk;
  const char *cd_marital_status;
  const char *cd_education_status;
} customer_demographic_t;
typedef struct {
  int len;
  customer_demographic_t *data;
} customer_demographic_list_t;
customer_demographic_list_t create_customer_demographic_list(int len) {
  customer_demographic_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_demographic_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  const char *ca_country;
  const char *ca_state;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static double test_TPCDS_Q48_simplified_result;
static void test_TPCDS_Q48_simplified() {
  if (!(test_TPCDS_Q48_simplified_result == 35)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.cdemo_sk = 1,
                                               .addr_sk = 1,
                                               .sold_date_sk = 1,
                                               .sales_price = 120.0,
                                               .net_profit = 1000.0,
                                               .quantity = 5},
                                (store_sale_t){.cdemo_sk = 2,
                                               .addr_sk = 2,
                                               .sold_date_sk = 1,
                                               .sales_price = 60.0,
                                               .net_profit = 2000.0,
                                               .quantity = 10},
                                (store_sale_t){.cdemo_sk = 3,
                                               .addr_sk = 3,
                                               .sold_date_sk = 1,
                                               .sales_price = 170.0,
                                               .net_profit = 10000.0,
                                               .quantity = 20}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  store_t store[] = {(store_t){.s_store_sk = 1}};
  int store_len = sizeof(store) / sizeof(store[0]);
  customer_demographic_t customer_demographics[] = {
      (customer_demographic_t){.cd_demo_sk = 1,
                               .cd_marital_status = "S",
                               .cd_education_status = "E1"},
      (customer_demographic_t){.cd_demo_sk = 2,
                               .cd_marital_status = "M",
                               .cd_education_status = "E2"},
      (customer_demographic_t){.cd_demo_sk = 3,
                               .cd_marital_status = "W",
                               .cd_education_status = "E3"}};
  int customer_demographics_len =
      sizeof(customer_demographics) / sizeof(customer_demographics[0]);
  customer_addres_t customer_address[] = {
      (customer_addres_t){
          .ca_address_sk = 1, .ca_country = "United States", .ca_state = "TX"},
      (customer_addres_t){
          .ca_address_sk = 2, .ca_country = "United States", .ca_state = "CA"},
      (customer_addres_t){
          .ca_address_sk = 3, .ca_country = "United States", .ca_state = "NY"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_year = 2000}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  list_string states1 = list_string_create(1);
  states1.data[0] = "TX";
  int states1 = states1;
  list_string states2 = list_string_create(1);
  states2.data[0] = "CA";
  int states2 = states2;
  list_string states3 = list_string_create(1);
  states3.data[0] = "NY";
  int states3 = states3;
  list_int tmp1 = list_int_create(store_sales.len * customer_demographics.len *
                                  customer_address.len * date_dim.len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < store_sales_len; tmp3++) {
    store_sale_t ss = store_sales[tmp3];
    for (int tmp4 = 0; tmp4 < customer_demographics_len; tmp4++) {
      customer_demographic_t cd = customer_demographics[tmp4];
      if (!(ss.cdemo_sk == cd.cd_demo_sk)) {
        continue;
      }
      for (int tmp5 = 0; tmp5 < customer_address_len; tmp5++) {
        customer_addres_t ca = customer_address[tmp5];
        if (!(ss.addr_sk == ca.ca_address_sk)) {
          continue;
        }
        for (int tmp6 = 0; tmp6 < date_dim_len; tmp6++) {
          date_dim_t d = date_dim[tmp6];
          if (!(ss.sold_date_sk == d.d_date_sk)) {
            continue;
          }
          if (!(d.d_year == year &&
                (((strcmp(cd.cd_marital_status, "S") == 0) &&
                  cd.cd_education_status == "E1" && ss.sales_price >= 100.0 &&
                  ss.sales_price <= 150.0) ||
                 ((strcmp(cd.cd_marital_status, "M") == 0) &&
                  cd.cd_education_status == "E2" && ss.sales_price >= 50.0 &&
                  ss.sales_price <= 100.0) ||
                 ((strcmp(cd.cd_marital_status, "W") == 0) &&
                  cd.cd_education_status == "E3" && ss.sales_price >= 150.0 &&
                  ss.sales_price <= 200.0)) &&
                ((contains_list_string(states1, ca.ca_state) &&
                  ss.net_profit >= 0 && ss.net_profit <= 2000) ||
                 (contains_list_string(states2, ca.ca_state) &&
                  ss.net_profit >= 150 && ss.net_profit <= 3000) ||
                 (contains_list_string(states3, ca.ca_state) &&
                  ss.net_profit >= 50 && ss.net_profit <= 25000)))) {
            continue;
          }
          tmp1.data[tmp2] = ss.quantity;
          tmp2++;
        }
      }
    }
  }
  tmp1.len = tmp2;
  list_int qty_base = tmp1;
  list_int qty = qty_base;
  double result = _sum_int(qty);
  _json_float(result);
  test_TPCDS_Q48_simplified_result = result;
  test_TPCDS_Q48_simplified();
  return 0;
}
